BJS2-96836 fix building